blocks/header/header.css
.nav-wrapper nav {
  display: flex;
  padding: 0 1rem;
  height: var(--nav-height);
  flex-direction: row-reverse;
  gap: 0 1rem;
  align-items: center;
  justify-content: space-between;
}

.nav-wrapper p {
  margin: 0;
}

.nav-hamburger {
  flex: 0;
}

.nav-hamburger button {
  padding: 0;
  margin: 0;
  border: none;
  border-radius: 0;
  background: none;
}

.nav-hamburger .icon-hamburger {
  height: 25px;
  width: 25px;
  fill: var(--highlight-color);
}

.nav-brand {
  flex: 0;
}

.nav-brand .icon-logo {
  height: 32px;
  width: 170px;
}

.nav-sections {
  display: none;
}

.nav-tools {
  display: none;
}
/* stylelint-disable-next-line no-descending-specificity */
.icon-logo {
  height: 70px;
  width: 190px;
}

body.gen-ai .genai-search-container .default-content-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-bottom: 10px;
}

body.gen-ai #search-main .genai-search-container .default-content-wrapper {
  gap: 0;
}

.header-search img, 
.header-search .icon svg {
  width: 36px;
  height: 36px;
  object-fit: contain;
  display: inline-block;
  color: #9CA393;
  box-sizing: border-box;
}

.header-search {
  position: fixed;
  right: 1rem;
  bottom: 6rem;
  display: flex;
  flex-direction: column;
  z-index: 1;
  cursor: pointer;
  transition: right 0.3s ease; 
}

.header-search.scrolled {
  right: 2px; 
}

.header-search.hide {
  display: none;
}

.header-search > a {
  width: 72px;
  height: 72px;
  line-height: 54px;
  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%);
  background-color: var(  --highlight-color);
  margin: 10px;
  padding: 16px 8px;
  border-radius: 50%;
  box-sizing: border-box;
  text-align: center;
}

.header-search a:hover {
  background-color: var(  --background-color-dark);
}

.header-search-modal {
  /* transform: scale(0); */
  transform: translate(-50%, -50%) scale(0);
  opacity: 0;
  position: fixed;
  top: 50%;
  left: 50%;
  width: 90vw;
  height: 90vh;
  background-color: var(--body-background-color);
  z-index: 9999;
  transition: all 0.2s ease-out;
  pointer-events: auto;
}

.header-search-modal.visible {
  transform: translate(-50%, -50%) scale(1);
  opacity: 1;
  display: unset;

  /* Retain horizontal centering */
  top: 50%;
  left: 50%;
}

.header-search-modal #search-main {
  overflow:hidden scroll;
  height: 100%;
  background-color: var(--background-color-light);
  border-radius: 6px;
}

.header-search-modal #search-main::-webkit-scrollbar {
  display:none;
} 

.header-search-close {
  position: absolute;
  right: 20px;
  top: 20px;
  display: flex;
  flex-direction: column;
  z-index: 1;
  width: 54px;
  height: 54px;
  line-height: 54px;
  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%);
  background-color: var(--color-gray-light);
  margin: 10px;
  padding: 9px;
  border-radius: 27px;
  box-sizing: border-box;
  cursor: pointer;
}

.header-search-close::before,
.header-search-close::after {
  content: "";
  display: block;
  box-sizing: border-box;
  position: absolute;
  width: 21px;
  height: 3px;
  background: var(--background-color);
  transform: rotate(45deg);
  border-radius: 5px;
  top: 8px;
  left: 1px;
  margin: 18px 16px;
}

.header-search-close::after {
  transform: rotate(-45deg);
}

/* main .search input {
  width: 100%;
  height: 60px;
  margin: auto;
  box-sizing: border-box;
  font-size: 20px;
  border: 2px solid var(--color-gray-3);
  font-family: var(--body-font-family);
  line-height: 58px;
  border-radius: 50px;
  padding: 0 96px 0 30px;
} */

#search-main .genai-search-container .default-content-wrapper h1 {
  font-size: 36px;
  text-align: center;
  color: var(--color-purple-gray);
  width: auto;

  @media (max-width: 600px){
    padding-top: 0;
    margin-top: 0;
  }
}

#search-main .search .search-box {
  margin: auto;
  text-align: center;
  max-width: 800px;
}

.header-search-modal .search-wrapper .search.block {
  display: block;
}

/* .search-wrapper {
  position: relative;
  max-width: 600px;
  margin: 20px 0;
  display: flex;
  flex-grow: 1;
  flex-direction: column;
} */

#search-main .search-wrapper .search-box input {
  font-size: 1.125rem;
  background: hsl(0deg 0% 100% / 78%);
  border-radius: 70px;
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid hsl(0deg 0% 100% / 78%);
  display: inline-block;
  height: 50px;
  padding-left: 20px;
  padding-right: 105px;
  box-shadow: 5px 5px 50px rgb(0 0 0 / 10%);
  box-sizing: border-box;
}

#search-main .genai-search-container {
  /* padding: 32px 0 14px; */
  padding: 2rem 1.5rem;
}

/* #search-main input {
  font-size: 1.25rem;
  width: 100%;
  max-width: 50rem;
  display: block;
  margin-bottom: 1rem;
  padding: 0.75rem 0.6rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
} */

#search-main .search-results {
  max-width: 1200px;
  margin: auto;
  padding-top: 32px;
}

#search-main .search-results > ul {
list-style: none;
margin: 0;
padding: 0;
display: grid;
grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
grid-gap: 32px;
}

/* Overlay styles */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  /* stylelint-disable-next-line color-function-notation */
  background-color: rgba(0, 0, 0, 40%); 
  z-index: 9998;
  display: none; 
  pointer-events: none;
}
/* ... */

